Integrating docker-compose